--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta property="og:title" content="Orion - Main">
+    <meta property="og:site_name" content="yushiteam.github.io">
+    <meta property="og:url" content="https://yushiteam.github.io/">
+    <meta property="og:description" content="Orion Main">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="yushi4ka юшико юша вьюшка Yushi4ka Юшико Юша Вьюшка Юшико Киров Yushiko Kirov yushiko kirov yushi4ka kirov Юшичка Киров Orion Орион OrionBot ОрионБот Bot Бот OrionOnline ОрионОнлайн">
+    <title>Orion - Main</title>
+    <link rel="icon" type="image/x-icon" href="site.ico">
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<h1>Orion Main</h1>
+</body>
+</html>
