--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link href="css/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<h1>Orion Main</h1>
+    <h1>Orion Main</h1>
+    <li>
+        <a href="main.html">Main</a>
+        <a href="api.html">API</a>
+    </li>
 </body>
 </html>
