--- a/api.html
+++ b/api.html
@@ -13,6 +13,11 @@
     <link href="css/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<h1>Orion API</h1>
+    <h1>Orion API</h1>
+    <li>
+        <a href="main.html">Main</a>
+        <a href="api.html">API.html</a>
+        <a href="api.json">API.json</a>
+    </li>
 </body>
 </html>
