--- a/api.html
+++ b/api.html
@@ -16,7 +16,7 @@
     <h1>Orion API</h1>
     <li>
         <a href="main.html">Main</a>
-        <a href="api.html">API.html</a>
+        <p>API.html</p>
         <a href="api.json">API.json</a>
     </li>
 </body>
