--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
     <h1>Orion Main</h1>
     <li>
-        <a href="main.html">Main</a>
-        <a href="api.html">API</a>
+        <p>Main</p>
+        <a href="api.html">API.html</a>
+        <a href="api.json">API.json</a>
     </li>
 </body>
 </html>
