--- a/api.html
+++ b/api.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Orion API</h1>
     <li>
-        <a href="main.html">Main</a>
+        <a href="index.html">Main</a>
         <p>API.html</p>
         <a href="api.json">API.json</a>
     </li>
