--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Orion Main</h1>
     <li>
-        <p>Main</p>
+        <a>Main</a>
         <a href="api.html">API.html</a>
         <a href="api.json">API.json</a>
     </li>
