--- a/api.html
+++ b/api.html
@@ -16,7 +16,7 @@
     <h1>Orion API</h1>
     <li>
         <a href="index.html">Main</a>
-        <p>API.html</p>
+        <a>API.html</a>
         <a href="api.json">API.json</a>
     </li>
 </body>
